--- a/.github/workflows/update_techtogether_io.yml
+++ b/.github/workflows/update_techtogether_io.yml
@@ -30,7 +30,7 @@ jobs:
               uses: s0/git-publish-subdir-action@develop
               env:
                   REPO: self
-                  BRANCH: deploy-action
+                  BRANCH: main
                   FOLDER: dist
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   MESSAGE: "Build: ({sha}) {msg}"
