--- a/.github/workflows/update_techtogether_io.yml
+++ b/.github/workflows/update_techtogether_io.yml
@@ -19,19 +19,18 @@ jobs:
 
             - name: Include public folder
               run: |
-                mkdir -p dist
-                mv public/* dist
+                mv public/* build
 
             - name: Include workflows
               run: |
-                  mkdir -p dist/.github/workflows
-                  mv .github/workflows/* dist/.github/workflows
+                  mkdir -p build/.github/workflows
+                  mv .github/workflows/* build/.github/workflows
             - name: Push to main
               uses: s0/git-publish-subdir-action@develop
               env:
                   REPO: self
                   BRANCH: main
-                  FOLDER: dist
+                  FOLDER: build
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   MESSAGE: "Build: ({sha}) {msg}"
     update:
