--- a/.github/workflows/update_techtogether_io.yml
+++ b/.github/workflows/update_techtogether_io.yml
@@ -2,7 +2,7 @@ name: Update MLH/techtogether.io
 on:
   push:
     branches:
-      - vidushi-deploy
+      - dev
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -16,10 +16,6 @@ jobs:
               run: npm run build
               env: 
                 CI: false
-
-#             - name: Include public folder
-#               run: |
-#                 mv public/* build
 
             - name: Include workflows
               run: |
